# jobpilot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-release.yaml  pre-commit.yaml  pypi-release.yaml
examples/: main.py
jobpilot/: __init__.py
jobpilot/models/: __init__.py  company.py  job.py  location.py
jobpilot/scrapers/: __init__.py  base.py  linkedin.py
